# EU-Power-FairValue-Forecast

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backtest/: __init__.py
backtest/regression/: __init__.py  pipeline.py  run_backtest.py  synthetic_bundle.py  walkforward.py
config/: config.yaml  pipeline.yaml
configs/: __init__.py  configs.py
docs/: report.md
notebooks/: regression_backtesting.ipynb  visualise_data.ipynb
prompts/: example_assisted_summary.md  quality_prompt.md
results/: latest
results/runs/20260413_190236/: config_snapshot.json  da_hourly_forecast.csv  llm_insight.json  llm_payload.json  run_summary.json  run_summary.txt  signal_summary.txt  submission.csv
results/runs/20260414_195655/: llm_insight.json  llm_payload.json  run_summary.json  run_summary.txt  signal_summary.txt  weekly_distribution.csv
scripts/: run_ingestion.py  run_pipeline.py
src/: dispatcher.py  pipeline.py
src/data/: fetcher.py  validator.py
src/eu_power_forecast/: __init__.py
src/eu_power_forecast/curves/: __init__.py  prompt_translation.py
src/eu_power_forecast/forecasting/: __init__.py  naive_baseline_model.py  power_errors.py  residual_load.py  validation.py
src/eu_power_forecast/ingestion/: __init__.py  fetch_smard_data.py  smard_data.py
src/eu_power_forecast/llm_integration/: __init__.py
src/eu_power_forecast/utils/: __init__.py
src/eu_power_forecast/workflow/: __init__.py  ai_accelerated.py
src/llm/: validator.py
src/models/: base.py  forecaster.py
src/signals/: generator.py
src/trading_pipeline_utils/: __init__.py  __main__.py  exceptions.py  logging_config.py  main.py  settings.py  types.py
src/trading_pipeline_utils/data/: fetch.py  schemas.py  store.py
src/trading_pipeline_utils/entsoe_data/: __init__.py  client.py  config.py  fetch.py
src/trading_pipeline_utils/features/: engineering.py  transforms.py
src/trading_pipeline_utils/forecasting/: __init__.py  backtest.py  explainability.py  leakage.py  loader.py  metrics.py  naive_baseline.py  reports.py  residual_load.py  simulation.py
src/trading_pipeline_utils/llm/: client.py  data_qa.py  prompts.py  schemas.py  summarizer.py
src/trading_pipeline_utils/market/: adapter.py  curve.py  invalidation.py  shapes.py  signals.py
src/trading_pipeline_utils/models/: inference.py  lgbm_compat.py  training.py
src/trading_pipeline_utils/reporting/: plots.py  (+3 more)
src/utils/: io.py  logging.py
tests/: test_curve_translation.py  test_forecasting_model.py  test_forecasting_simulation.py  test_invalidation.py  test_llm_data_qa.py  test_llm_payload.py  test_plot_outputs.py  test_production_inference.py  test_quality.py  test_regression_walkforward.py  test_signal_engine.py  test_validation.py
tests/integration/: test_pipeline_smoke.py
tests/unit/: test_curve_translation.py  test_data_validation.py  test_entsoe_xml.py  test_invalidation.py  test_io.py  test_llm_payload.py  test_plots.py  test_settings.py  test_signals.py  test_tables.py
(+21 files in other folders)
