[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eu-power-fairvalue-forecast"
version = "0.1.0"
description = "EU power public data, fair-value forecasting, curve translation, and AI-accelerated workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]
notebooks = [
    "matplotlib>=3.8",
    "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
where = ["src", "."]

[tool.setuptools.package-data]
"eu_power_forecast.llm_integration.data_fetch.quality" = ["quality_prompt.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
