[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eu-power-fairvalue-forecast"
version = "0.2.0"
description = "EU power fair-value forecasting pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]
notebooks = [
    "matplotlib>=3.8",
    "ipykernel>=6.0",
]

[tool.setuptools]
py-modules = ["pipeline"]

[tool.setuptools.packages.find]
where = ["src", "."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
