[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-pipeline"
version = "1.0.0"
description = "European power day-ahead trading pipeline: forecast, market analytics, LLM reporting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "joblib>=1.3",
]

[project.scripts]
trading-pipeline = "trading_pipeline_utils.main:run_pipeline"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]
ml = [
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "shap>=0.44",
    "matplotlib>=3.8",
]
llm = [
    "google-genai>=1.0",
]
full = [
    "trading-pipeline[ml,llm]",
]

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["dispatcher"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["trading_pipeline_utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
